# ros_pedestrians_simulation

./: .clang-format  .gitignore  README.md  configure.sh
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/pkgconfig/: gazebo_sfm_plugin.pc
src/gazebo_sfm_plugin/: package.xml
src/gazebo_sfm_plugin/config/: amcl_params.yaml  joint_names_car_demo.yaml  pedestrians_config.yaml
src/gazebo_sfm_plugin/include/: pedestrian_sfm_plugin.h
src/gazebo_sfm_plugin/launch/: cafe.launch  main.launch
src/gazebo_sfm_plugin/maps/: test_scene.pgm  test_scene.yaml
src/gazebo_sfm_plugin/rviz/: test.rviz
src/gazebo_sfm_plugin/scripts/: main.sh  pedestrians_generate.py
src/gazebo_sfm_plugin/src/: PedestrianSFMPlugin.cpp  pedestrian_sfm_plugin.cpp
src/gazebo_sfm_plugin/urdf/: turtlebot3_waffle.gazebo.xacro
src/ped_simulation/: package.xml
src/ped_simulation/config/: pedestrians_config.yaml  pedestrians_config_gap.yaml
src/ped_simulation/launch/: cafe.launch  gap.launch
src/ped_simulation/launch/include/: amcl.launch.xml
src/ped_simulation/scripts/: gap.sh  pedestrians_generate.py  run_gap.sh
src/ped_simulation/worlds/: cafe3.world  gap.world  gap.world.bak  gap_with_pedestrians.world  test_scene_with_pedestrians.world
src/pedestrian_detection/: CMakeLists.txt  package.xml
src/pedestrian_simulation/: CMakeLists.txt
src/pedestrian_tracker/: CMakeLists.txt  package.xml
src/pedestrian_tracker/scripts/: dr_spaam_ros.py
src/user_config/: obstacles_config.yaml  ped_circle_config.yaml  ped_gap_config.yaml  pedestrians_config.yaml  user_config.yaml
(+74 files in other folders)
