<?xml version="1.0"?>
<package>
  <name>pedestrian_tracker</name>
  <version>1.0.0</version>
  <description>ROS interface for DR-SPAAM detector</description>

  <maintainer email="913982779@qq.com">Winter</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
